dev(header):header done

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <!-- header a fascia nera con flex e JCflex-end -->
-        <div class="bandH B flex JCFlexEnd">
+        <div class="bandH B flex JCFlexEnd alignFE">
             <!-- containers comandi header -->
-            <div class="bgGrey">
-                <h2><i class="fa-solid fa-table-cells"></i>Speaker View</h2>
+            <div class="headContainer  marR">
+                <p><i class="fa-solid fa-table-cells"></i><strong> Speaker View</strong></p>
             </div>               
-            <div class="bgGrey">
-                <i class="fa-solid fa-arrows-maximize"></i>
+            <div class="headContainer marR">
+                <i class="fa-solid fa-maximize"></i>
             </div>
         </div>
     </header>  
@@ -47,7 +47,7 @@
             </div>
             <!-- div fine meeting -->
             <div>
-                
+
             </div>
         </div>
     </footer>
