dev(footer): footer done, need position with the main black div

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <!-- header a fascia nera con flex e JCflex-end -->
         <div class="bandH B flex JCFlexEnd alignFE">
             <!-- containers comandi header -->
-            <div class="headContainer  marR">
+            <div class="headContainer G  marR">
                 <p><i class="fa-solid fa-table-cells"></i><strong> Speaker View</strong></p>
             </div>               
-            <div class="headContainer marR">
+            <div class="headContainer G marR">
                 <i class="fa-solid fa-maximize"></i>
             </div>
         </div>
@@ -36,18 +36,24 @@
     </main>
     <footer>
         <!-- footer a fascia grigia con flex e JCspace-between -->
-        <div class="bandF G flex JCspB">
+        <div class="bandF G flex JCSpB alignCen">
             <!-- div con controlli principali -->
             <div>
-
+                <i class="fa-solid fa-microphone"></i>
+                <i class="fa-solid fa-chevron-up"></i>
+                <i class="fa-solid fa-video"></i> 
+                <i class="fa-solid fa-chevron-up"></i>
             </div>
             <!-- div con multifunzione -->
             <div>
-
+                <div class="flex col alignCen">
+                    <span><i class="fa-solid fa-user-group"></i></span>
+                    <span>aaaaaaaaaaaa</span>
+                </div>
             </div>
             <!-- div fine meeting -->
-            <div>
-
+            <div class="end">
+                End Meeting
             </div>
         </div>
     </footer>
