dev(body): main black div and internal grid done

--- a/index.html
+++ b/index.html
@@ -26,11 +26,47 @@
         <!-- gigadiv nero con vh - foot e head -->
         <div class="giga B">
             <!-- megadiv flex row -->
-            <div class="mega flex wrap">
+            <div class="mega flex wrap JCSpB">
                 <!-- 35 div position relative con img e testo absolute sopra -->
-                <div class="posRel card">
-                    
-                </div>
+                <!-- <div class="posRel card">
+
+                    <p>aa</p>
+                </div> -->
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
+                <div class="card pRel"></div>
             </div>
         </div>
     </main>
