dev(body): images set with text over in position absolute

--- a/index.html
+++ b/index.html
@@ -32,41 +32,146 @@
 
                     <p>aa</p>
                 </div> -->
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
-                <div class="card pRel"></div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/200/300" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
+                <div class="card pRel">
+                    <img src="https://picsum.photos/250/100" alt="">
+                    <p class="pAbsUser"><i class="fa-solid fa-microphone-slash"></i>Finco Pallino</p>
+                </div>
             </div>
         </div>
     </main>
