dev (footer) : footer ended, with hover on end meeting button

--- a/index.html
+++ b/index.html
@@ -179,22 +179,59 @@
         <!-- footer a fascia grigia con flex e JCspace-between -->
         <div class="bandF G flex JCSpB alignCen">
             <!-- div con controlli principali -->
-            <div>
-                <i class="fa-solid fa-microphone"></i>
-                <i class="fa-solid fa-chevron-up"></i>
-                <i class="fa-solid fa-video"></i> 
-                <i class="fa-solid fa-chevron-up"></i>
+            <div class="flex alignCen">
+                <div class="marR flex col alignCen">
+                    <i class="fa-solid fa-microphone"></i>
+                    <p>mute</p>
+                </div>
+                <i class="fa-solid fa-chevron-up marR"></i>
+                <div class="marR flex col alignCen">
+                    <i class="fa-solid fa-video"></i> 
+                    <p>mute</p>
+                </div>
+                <i class="fa-solid fa-chevron-up marR"></i>
             </div>
             <!-- div con multifunzione -->
-            <div>
-                <div class="flex col alignCen">
+            <div class="flex alignCen">
+                <div class="flex col alignCen marR">
                     <span><i class="fa-solid fa-user-group"></i></span>
                     <span>aaaaaaaaaaaa</span>
                 </div>
+                <div class="flex col alignCen marR">
+                    <span><i class="fa-solid fa-user-group"></i></span>
+                    <span>aaaaaa</span>
+                </div>
+                <div class="flex col alignCen marR">
+                    <span><i class="fa-solid fa-user-group"></i></span>
+                    <span>aaaaaaa</span>
+                </div>
+                <div class="flex col alignCen marR">
+                    <span><i class="fa-solid fa-user-group"></i></span>
+                    <span>aaaaaa</span>
+                </div>
+                <div class="flex alignCen">
+                    <i class="fa-solid fa-chevron-up marR"></i>
+                    <div class="flex col alignCen marR">
+                        <span><i class="fa-solid fa-comment"></i></span>
+                        <span>Chat</span>
+                    </div>
+                </div>
+                <div class="flex col alignCen marR">
+                    <span><i class="fa-solid fa-user-group"></i></span>
+                    <span>aaaaaaa</span>
+                </div>
+                <div class="flex col alignCen marR">
+                    <span><i class="fa-solid fa-user-group"></i></span>
+                    <span>aaaaaaa</span>
+                </div>
+                <div class="flex col alignCen marR">
+                    <span><i class="fa-solid fa-user-group"></i></span>
+                    <span>aaaaaa</span>
+                </div>
             </div>
             <!-- div fine meeting -->
-            <div class="end">
-                End Meeting
+            <div class="flex alignCen JCCen end">
+                <p>End Meeting</p>
             </div>
         </div>
     </footer>
